fixed button spacing

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ footer.page-footer {
 	background-size: cover;
 	background-image: url('../img/banner-home.png');
 	overflow: hidden;
-	height: 300px;
+	height: 350px;
 }
 
 .center-text {
